# NDKxAndroid

./: LICENSE  README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/rishav/ndkxandroid/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/rishav/ndkxandroid/: MainActivity.kt  ProcessImageActivity.kt
app/src/main/java/com/rishav/ndkxandroid/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/ndk/: CMakeLists.txt  native-lib.cpp
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/rishav/ndkxandroid/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
